@@ -404,7 +404,7 @@
       <arg choice="plain"><option>show</option></arg>
 
       <arg
-      choice="req"><option>actions|classifiers|connections|config|filters|macros|zones</option></arg>
+      choice="req"><option>actions|classifiers|connections|config|filters|ip|macros|zones</option></arg>
     </cmdsynopsis>
 
     <cmdsynopsis>
@@ -1075,6 +1075,14 @@
             </varlistentry>
 
             <varlistentry>
+              <term><emphasis role="bold">ip</emphasis></term>
+
+              <listitem>
+                <para>Displays the system's IPv6 configuration.</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
               <term><emphasis role="bold">log</emphasis></term>
 
               <listitem>
@@ -1118,6 +1126,14 @@
                 ACCEPT policies are not displayed for zones associated with a
                 single network where that network doesn't specify
                 <option>routeback</option>.</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
+              <term><emphasis role="bold">Routing</emphasis></term>
+
+              <listitem>
+                <para>Displays the system's IPv6 routing configuration.</para>
               </listitem>
             </varlistentry>
 
@@ -1245,8 +1261,9 @@
     shorewall6-blacklist(5), shorewall6-hosts(5), shorewall6-interfaces(5),
     shorewall6-maclist(5), shorewall6-params(5), shorewall6-policy(5),
     shorewall6-providers(5), shorewall6-route_rules(5),
-    shorewall6-routestopped(5), shorewall6-rules(5), shorewall6.conf(5), shorewall6-secmarks(5),
-    shorewall6-tcclasses(5), shorewall6-tcdevices(5), shorewall6-tcrules(5),
-    shorewall6-tos(5), shorewall6-tunnels(5), shorewall6-zones(5)</para>
+    shorewall6-routestopped(5), shorewall6-rules(5), shorewall6.conf(5),
+    shorewall6-secmarks(5), shorewall6-tcclasses(5), shorewall6-tcdevices(5),
+    shorewall6-tcrules(5), shorewall6-tos(5), shorewall6-tunnels(5),
+    shorewall6-zones(5)</para>
   </refsect1>
 </refentry>
