@@ -79,6 +79,11 @@ Beta 1
       I I I.  N E W   F E A T U R E S   I N   T H I S  R E L E A S E
 ----------------------------------------------------------------------------
 
+RC 1
+
+1)  A 'show ipaccount' command has been added to /sbin/shorewall. It
+    displays each per-IP accounting table.  
+
 Beta 3
 
 1)  This release adds support for per-IP accounting using the ACCOUNT
