@@ -6,6 +6,8 @@ Changes in Shorewall 4.4.17 RC 1
 
 3)  Tighten up the editing of ACCOUNT(...).
 
+4)  Add 'show ipaccount' command.
+
 Changes in Shorewall 4.4.17 Beta 3
 
 1)  Allow run-time address variables in the masq file.
